A few fixes for the collection on small screens

--- a/shared.css
+++ b/shared.css
@@ -462,7 +462,7 @@ input[type="text"].position_div {
 }
 
 @media (max-height: 800px) {
-    .bingo-popup {
+    .popup, .bingo-popup {
         width: 80%;
         left: 10%;
         top: 0%;
@@ -476,7 +476,7 @@ input[type="text"].position_div {
         .side-by-side {
             flex-direction: column;
         }
-        .bingo-popup {
+        .popup, .bingo-popup {
             font-size: 3rem;
             width: 90%;
             left: 5%;
